--- a/index.html
+++ b/index.html
@@ -8,24 +8,36 @@
 <body>
   <h1>Mandelbrot and Julia Sets Visualization</h1>
   <div class="container">
+    <!-- Mandelbrot Set Container -->
     <div class="fractal-container">
       <h2>Mandelbrot Set</h2>
-      <canvas id="mandelbrotCanvas" width="800" height="800"></canvas>
+      <div class="canvas-container">
+        <canvas id="mandelbrotCanvas" width="600" height="600"></canvas>
+        <canvas id="mandelbrotMarkerCanvas" width="600" height="600"></canvas>
+      </div>
     </div>
+
+    <!-- Julia Set Container -->
     <div class="fractal-container">
       <h2>Julia Set</h2>
-      <canvas id="juliaCanvas" width="800" height="800"></canvas>
+      <div class="canvas-container">
+        <canvas id="juliaCanvas" width="600" height="600"></canvas>
+        <canvas id="juliaMarkerCanvas" width="600" height="600"></canvas>
+      </div>
     </div>
   </div>
+
   <div class="controls">
     <label for="iterations">Iterations: </label>
     <input type="range" id="iterations" name="iterations" min="50" max="1000" value="200">
     <span id="iterationValue">200</span>
   </div>
+
   <div class="info">
-    <p>Drag on the Julia Set canvas to change the constant <strong>c</strong>.</p>
+    <p>Drag on either canvas to change the constant <strong>c</strong>.</p>
     <p>Current c: (<span id="cReal">0.00</span>, <span id="cImag">0.00</span>)</p>
   </div>
+
   <script src="Mandelbrot.js"></script>
 </body>
 </html>
