Shifted Mandelbrot Set

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 
   <div class="controls">
     <label for="iterations">Iterations: </label>
-    <input type="range" id="iterations" name="iterations" min="50" max="1000" value="200">
+    <input type="range" id="iterations" name="iterations" min="1" max="1000" value="200">
     <span id="iterationValue">200</span>
+
+    <!-- New Checkbox for Grid Toggle -->
+    <label for="toggleGrid">Show Grid: </label>
+    <input type="checkbox" id="toggleGrid" name="toggleGrid">
   </div>
 
   <div class="info">
