--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
     <input type="range" id="iterations" name="iterations" min="1" max="1000" value="200">
     <span id="iterationValue">200</span>
 
-    <!-- New Checkbox for Grid Toggle -->
     <label for="toggleGrid">Show Grid: </label>
     <input type="checkbox" id="toggleGrid" name="toggleGrid">
-  </div>
+    
+    <!-- Add this new control -->
+    <label for="showOrbits">Show Orbits: </label>
+    <input type="checkbox" id="showOrbits" name="showOrbits">
+</div>
 
   <div class="info">
     <p>Drag on either canvas to change the constant <strong>c</strong>.</p>
